crates/squawk_parser/src/snapshots/squawk_parser__test__checkpoint_ok.snap
---
source: crates/squawk_parser/src/test.rs
input_file: crates/squawk_parser/test_data/ok/checkpoint.sql
---
SOURCE_FILE
  COMMENT "-- checkpoint"
  WHITESPACE "\n"
  CHECKPOINT_STMT
    CHECKPOINT_KW "checkpoint"
  SEMICOLON ";"
  WHITESPACE "\n\n"
